TypeSet if fixed and server is running. Hopefully this fixes Render.
